# brush

./: Cargo.toml
.github/workflows/: build.yml  ci.yaml  ez.yml
brush-core/src/: expansion.rs  interp.rs  patterns.rs  shell.rs
brush-interactive/src/reedline/: highlighter.rs
brush-parser/src/: parser.rs  word.rs
brush-shell/tests/cases/: extended_tests.yaml  word_expansion.yaml
