[workspace]
resolver = "2"
members = ["brush-shell", "brush-parser", "brush-core", "brush-interactive", "fuzz", "xtask"]
default-members = ["brush-shell"]

[workspace.package]
authors = ["reuben olinsky"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
keywords = ["cli", "shell", "sh", "bash", "script"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reubeno/brush"
rust-version = "1.75.0"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
expect_used = "deny"
format_push_string = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unwrap_in_result = "deny"
bool_to_int_with_if = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
if_not_else = "allow"
if_same_then_else = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
result_large_err = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

[profile.release]
opt-level = 3                     # 最大优化
lto = true                        # 启用链接时优化
codegen-units = 1                 # 全局优化
panic = "abort"                   # 使用 abort 而不是 unwind
debug = false                      # 禁用调试信息
overflow-checks = false           # 禁用溢出检查
strip = "debuginfo"               # 去除调试信息
inline-threshold = 1024           # 增加内联阈值
target-cpu = "cortex-x3,cortex-a710,cortex-a715,cortex-a510" # 针对所有核心进行优化
target-feature = "+neon,+vfp4,+crypto" # 启用 NEON、VFP4 和加密指令集
